<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data tools:ignore="ExtraText">

        <variable
            name="subTask"
            type="edu.hm.cs.ma.todoguru.database.SubTask" />

        <variable
            name="listener"
            type="edu.hm.cs.ma.todoguru.task.subTask.SubTaskAdapter.Listener" />

        <variable
            name="timeTrackerViewModel"
            type="edu.hm.cs.ma.todoguru.task.timeTracker.TimeTrackerViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/view_task" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_task"
                style="@style/textBox"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/display_task1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_size_20sp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/display_task"
                app:srcCompat="@drawable/message_24"
                android:layout_marginStart="@dimen/text_size_14sp"
                />

            <TextView
                android:id="@+id/description_task"
                style="@style/textBox"
                android:textSize="@dimen/text_size_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/display_task2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_size_20sp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/display_task"
                app:srcCompat="@drawable/calendar_today_24"
                android:layout_marginStart="@dimen/text_size_14sp"/>

            <TextView
                android:id="@+id/dueDate_task"
                style="@style/textBox"
                android:textSize="@dimen/text_size_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/display_task1" />

            <ImageView
                android:id="@+id/display_task3"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_size_20sp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/display_task"
                app:srcCompat="@drawable/ic_baseline_notification_important_24"
                android:layout_marginStart="@dimen/text_size_14sp"/>

            <TextView
                android:id="@+id/reminder_date"
                style="@style/textBox"
                android:textSize="@dimen/text_size_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/display_task4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_size_20sp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/display_task"
                app:srcCompat="@drawable/category_24"
                android:layout_marginStart="@dimen/text_size_14sp"/>

            <TextView
                android:id="@+id/category"
                style="@style/textBox"
                android:textSize="@dimen/text_size_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"/>

            <ImageView
                android:id="@+id/display_task5"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_size_20sp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/display_task"
                app:srcCompat="@drawable/subject_24"
                android:layout_marginStart="@dimen/text_size_14sp"/>

                <TextView
                    android:id="@+id/subtask_title"
                    style="@style/textBox"
                    android:textSize="@dimen/text_size_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@{subTask.description}" />

            <TextView
                android:id="@+id/track_task_time"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_time"
                android:textAlignment="center"
                android:textColor="@color/colorSecondary" />

            <!-- Start of the visible fragment layout using ConstraintLayout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- Simplest way of displaying scrollable text and data. There is a
                     better and more efficient way to do this, and you will learn about
                     RecyclerView in a later lesson. -->

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stop_button">

                    <!-- In the TextView, we can access the nightsString LiveData,
                         which keeps it displayed and updated in the TextView
                         whenever it changes. -->

                    <TextView
                        android:id="@+id/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:layout_marginEnd="@dimen/margin_16dp"
                        android:text="@{timeTrackerViewModel.timesString}"
                        android:textAlignment="center"/>
                </ScrollView>

                <!-- With data binding and LiveData, we can track the buttons' visibility states
                     from the ViewModel. The click handler is in the ViewModel as well, and
                     you can set it for the Views using this lambda pattern. -->

                <Button
                    android:id="@+id/start_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:text="@string/start"
                    android:enabled="@{timeTrackerViewModel.startButtonVisible}"
                    android:onClick="@{() -> timeTrackerViewModel.onStartTracking()}"
                    app:layout_constraintBaseline_toBaselineOf="@id/stop_button"
                    app:layout_constraintEnd_toStartOf="@+id/stop_button"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/stop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:text="@string/stop"
                    android:enabled="@{timeTrackerViewModel.stopButtonVisible}"
                    android:onClick="@{() -> timeTrackerViewModel.onStopTracking()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/start_button"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
